# jmax

./: .gitignore  AUTHORS  CHANGES  COPYING  ChangeLog  INSTALL.sh  JMAX-VERSION  LICENCE.fr  LICENSE  LICENSE-BETA  LISEZMOI  Makefile  Makefile.am  Makefile.in  README  RELEASE_NOTES.html  ReleaseNotes.html  TODO.html  TTT  VERSION  acconfig.h  acinclude.m4  aclocal.m4  autogen-local.sh  autogen.sh  configure  configure.in  cvscompile  distrib  libtool  myautogen.sh
client/: Makefile.am  configure.in
client/cpp/: Makefile.am  ftsclient.cpp
client/include/: Makefile.am  config.h.in
client/java/: .gitignore  Makefile.am
client/python/: Makefile.am  testClient.py  testGtkClientConsole.py
client/swig/: TO_DO  ftsclient.i
client/tests/: Makefile.am
client/winbuild/: Makefile.am  ftsclient.dep  ftsclient.dsp  ftsclient.dsw  ftsclient.mak  ftsclient_java.dsp  ftsclient_java.dsw  ftsclient_java.mak
config/: Makefile  Makefile.am  Makefile.in  audio.tcl  config.jmax  config.jprj  config_linux_alsa.jmax  config_linux_alsa.jprj  config_linux_oss.jmax  config_macosx.jmax  config_macosx.jprj  config_win32.jmax  create_config.jmax  default_config_linux_alsa.jcfg  default_config_linux_jack.jcfg  default_project.jprj  default_project_linux_alsa.jprj  default_project_linux_jack.jprj  default_project_macosx.jprj  defaults.tcl  device.irix5.3  device.irix6.2  device.mips1  device.o2r10k  device.origin  distrib  edit_config_win32.jmax  ermesrc.tcl  example.jmax.cfg  example.jmaxrc  jmax.cfg  midi.tcl  packages.scm  packages.tcl  resources.erm  site.tcl
doc/: Makefile  Makefile.am  ReleaseNotes.html  classes.html  compiling.html  configuration.html  debugging.html  dev-control-objects.html  dev-dsp-objects.html  developping-dsp-objects.html  distrib  dsp-classes.html  explode.html  footer  header  help.html  index.html  installing.html  jmax-specificities.html  keys.html  patch.grammar  patcher.html  porting-jmax.html  project-package.html  running.html  server-kernel-api.html
doc/api/: Makefile.am  doxygen.config  fake_jmax.pl
doc/arch/: index.html
doc/developer/: Makefile  compiling_jmax.html  control_objects.html  developing_objects.html  distrib  dsp_objects.html  index.html  kernel_reference.html
doc/images/: Makefile  Makefile.am  distrib
doc/release_notes/: distrib  index.html  release_notes.2.3.11.html  release_notes.2.3.12.html  release_notes.2.3.13.html  release_notes.2.3.14.html  release_notes.2.3.15.html  release_notes.2.3.16.html  release_notes.2.3.17.html  release_notes.2.3.18.html  release_notes.2.3.19.html  release_notes.2.4.0.html  release_notes.2.4.1.html  release_notes.2.4.2.html  release_notes.2.4.3.html  release_notes.2.4.4.html  release_notes.2.4.5.html  release_notes.2.4.6.html  release_notes.2.4.7.html  release_notes.2.5.0.html
doc/user/: Makefile  distrib  editors.html  explode.html  getting_started.html  index.html  installation.html  ioconf.html  language.html  notes.html  packages.html  patcher.html  projects.html  system.html
fts/: .gitignore  Makefile  Makefile.am  Makefile.in  OLDMakefile  OLDclient.c  OLDexpression.c  OLDftsdata.c  OLDpatcherdata.c  OLDucs.c  abstraction.c  array.c  atom.c  atomfile.c  audio.c  audioconfig.c  audiofile.c  audiolabel.c  autosave.c  binaryprotocol.c  bmaxfile.c  buffer.c  bytestream.c  class.c  client.c  clientmanager.c  clipboard.c  config.c  config.h.in  connection.c  cwppc.c  define.c  distrib  doctor.c  dsp.c  dspgraph.c  dumper.c  errobj.c  expression.c  fifo.c  (+66 more)
fts/Makefiles/: Makefile.common  Makefile.debug  Makefile.exports  Makefile.fts  Makefile.gnu  Makefile.i386-linux  Makefile.i686-linux  Makefile.i686-win32  Makefile.irix5.3  Makefile.irix6.2  Makefile.irix62r4k  Makefile.irix63r10k  Makefile.irix63r5k  Makefile.irix64r10k  Makefile.irix65r10k  Makefile.irix65r4k  Makefile.irix65r5k  Makefile.lib  Makefile.lib.end  Makefile.linuxpc  Makefile.linuxppc  Makefile.macosx  Makefile.misc  Makefile.o2r10k  Makefile.o2r5k  Makefile.opt  Makefile.origin  Makefile.ppc-linux  Makefile.ppc-macosx  Makefile.r10k-irix6.3  Makefile.r10k-irix6.5  Makefile.r4k-irix6.5  Makefile.r5k-irix6.3  Makefile.r5k-irix6.5  Makefile.rhapsody  Makefile.sgi  Makefile.solaris  Makefile.solaris2  Makefile.sparc-solaris  distrib  (+1 more)
fts/src/: ChangeLog  Makefile  distrib  fts.h  lang.h  runtime.h  sys.h
images/: Makefile  Makefile.am  Makefile.in  jmax.icns  jmax.icons
include/fts/: Makefile.am  OLDclient.h  array.h  atom.h  atomfile.h  audio.h  audiofile.h  binaryprotocol.h  buffer.h  bytestream.h  class.h  client.h  config-ac.h.in  config-macosx.h  config-win32.h  config.h  connection.h  doctor.h  dsp.h  dumper.h  errobj.h  expression.h  fifo.h  file.h  fpe.h  ftl.h  ftlmem.h  ftmext.h  fts.h  ftsnew.h  function.h  hashtable.h  inout.h  iterator.h  label.h  lang.h  list.h  malloc.h  mem.h  message.h  (+36 more)
include/ftsprivate/: Makefile.am  OLDclient.h  OLDexpression.h  abstraction.h  audio.h  audioconfig.h  audiolabel.h  bmaxfile.h  bmaxhdr.h  class.h  client.h  clientmanager.h  config.h  connection.h  doctor.h  dsp.h  dspgraph.h  errobj.h  expression.h  file.h  fpe.h  label.h  loader.h  message.h  midi.h  object.h  outlet.h  package.h  parser.h  parserdata.h  patcher.h  patcherobject.h  patfile.h  patparser.h  platform.h  property.h  protocol.h  saver.h  sched.h  selection.h  (+8 more)
java/: Makefile  Makefile.am  Makefile.in  distrib
java/Makefiles/: Makefile.common  Makefile.debug  Makefile.linuxpc  Makefile.misc  Makefile.opt  Makefile.origin  Makefile.package  Makefile.package.misc  distrib
java/classes/: Makefile  distrib
java/lib/: Makefile  Makefile.am  distrib
java/src/: ChangeLog  Makefile  Makefile.am  Makefile.in  distrib
macosxbuild/jMaxProject/: JMaxWrapper.java  Makefile.am  SDK-info.plist  doc-small.tiff  doc.tiff  jmax.icns  jmax_file.icns  libdata-info.plist  libfts-info.plist  version-info.plist
tutorials/basics/: BASICS.jmax  Makefile  Makefile.am  Makefile.in  bang.tutorial.jmax  comment.tutorial.jmax  coucou.jmax  labels.tutorial.jmax  lists.tutorial.jmax  message.tutorial.jmax  metro.tutorial.jmax  (+10 more)
(+2223 files in other folders)
