dnl Process this file with autoconf to produce a configure script

AC_INIT(fts/version.c.in)

. $srcdir/JMAX-VERSION
JMAX_VERSION=${JMAX_MAJOR_VERSION}.${JMAX_MINOR_VERSION}.${JMAX_PATCH_VERSION}${JMAX_VERSION_STATUS}

VERSION=${JMAX_VERSION}
PACKAGE=jmax

AM_INIT_AUTOMAKE(jmax,${JMAX_VERSION})

AC_PREFIX_DEFAULT(/usr)

AM_CONFIG_HEADER(include/ftsconfig-ac.h)

dnl Guess the host
AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_CC
if test "$ac_cv_prog_cc" = "no" ; then
   AC_MSG_ERROR([*** No C compiler])
fi
CFLAGS=""
AC_ISC_POSIX
AC_PROG_INSTALL

dnl Check for libtool
AC_LIBTOOL_DLOPEN
AM_PROG_LIBTOOL

dnl Checks for libraries.
AC_CHECK_LIB(m, sin)
AC_CHECK_FUNCS(sinf cosf tanf asinf acosf atanf expf logf log10f)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS( sys/param.h unistd.h alloca.h sys/time.h time.h sys/socket.h netinet/in.h arpa/inet.h netdb.h)

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_CHECK_FUNCS(socket)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_BIGENDIAN

dnl Check for Java compiler
dnl AC_PROG_JAVAC
JAVACX=javac
AC_SUBST(JAVACX)
JAVACFLAGSX=
case "$debug" in
 yes)
  JAVACFLAGSX="-g"
  ;;
esac
AC_SUBST(JAVACFLAGSX)

dnl Big hack for Mac OS X (see ChangeLog about the -twolevel_namespace)
case "$host" in
powerpc-apple-darwin*)
  sed -e 's/archive_cmds=\(.*CC \)/archive_cmds=\1 -flat_namespace /' -e 's/-undefined warning/-undefined suppress/' libtool > libtool.out 
  mv libtool.out libtool
;;
esac

dnl Check for memory allocation debug
AC_ARG_ENABLE(check_memory,
  [  --enable-check-memory[=value]   compile with -fcheck-memory-usage [default=no]],
  check_memory="yes",
  check_memory="no")

dnl Check for libtool version
dnl Carefull: the character set in sed substitute is eaten by m4, so we must change quoting
dnl (autoconf manual, section 7.3 quoting)
AC_MSG_CHECKING( "for libtool major version")
changequote(<<,>>)dnl
libtool_major_version=`grep "VERSION=" ltmain.sh | sed 's/VERSION=//' | sed 's/\([0-9][0-9]*\)\..*/\1/'`
changequote([,])dnl
AC_MSG_RESULT( "$libtool_major_version")
AC_MSG_CHECKING( "for libtool minor version")
changequote(<<,>>)dnl
libtool_minor_version=`grep "VERSION=" ltmain.sh | sed 's/VERSION=//' | sed 's/[0-9][0-9]*\.\([0-9][0-9]*\)\(\.[0-9][0-9]*\)*/\1/'`
changequote([,])dnl
AC_MSG_RESULT( "$libtool_minor_version")
if test "$libtool_major_version" -le 1 -a "$libtool_minor_version" -lt 4 ; then DOT_LIBS=-L.libs ; fi
AC_SUBST(DOT_LIBS)

dnl Check for debug
AC_ARG_ENABLE(debug,
  [  --enable-debug[=value]   compile with debug [default=no]],
  with_debug="yes",
  with_debug="no")
if test "$with_debug" = "yes"
then
  AC_DEFINE(DEBUG,1,[Define to enable debug])
  CFLAGS="-g"
fi

dnl Set platform specifics
case "$host" in

i*86-pc-linux-gnu)
PLATFORM=linux
CFLAGS="$CFLAGS -Wall -Wno-unused -mpentiumpro"
if test "$with_debug" != "yes"
then
  CFLAGS="$CFLAGS -O3 -funroll-loops -fmove-all-movables -fstrict-aliasing"
fi
if test "$check_memory" = "yes"
then
  CFLAGS="$CFLAGS -fcheck-memory-usage"
fi

AC_CHECK_HEADER( "alsa/asoundlib.h", alsa_found="yes")

PLATFORM_PACKAGES="oss unixdtd aflib"

if test "x$alsa_found" = "xyes" ; then
CONFIG_FILE=config_linux_alsa.jmax
PLATFORM_PACKAGES="alsa $PLATFORM_PACKAGES"
else
CONFIG_FILE=config_linux_oss.jmax
fi
FTS_SYS_LIBS="-ldl -lpthread `test $check_memory = yes && echo -lmpatrol -lbfd -liberty` -laudiofile"
ACX_C_RESTRICT
;;

mips-sgi-irix6.5)
PLATFORM=sgi
CFLAGS="$CFLAGS -mips4 -n32 -r10000 -LANG:restrict"
if test "$with_debug" != "yes"
then
  CFLAGS="$CFLAGS -O3 -OPT:roundoff=3:IEEE_arithmetic=3:alias=typed:Olimit=0 -TARG:platform=ip27:processor=r10000 -float_const -INLINE:=ON:dfe=ON  -LNO:opt=1"
fi
PLATFORM_PACKAGES="sgi unixdtd"
FTS_SYS_LIBS="-ldl -laudiofile"
CONFIG_FILE=config_sgi.jmax
ACX_C_RESTRICT
;;

powerpc-apple-darwin*)
PLATFORM=macosx
CFLAGS="$CFLAGS -Wall -Wno-unused"
if test "$with_debug" != "yes"
then
  dnl Functions inlining may result in bad code generation (http://developer.apple.com/techpubs/macosx/Essentials/Performance/Languages/Automated_C_ptimization.html)
  CFLAGS="$CFLAGS -O3 -funroll-loops -fno-inline"
fi
PLATFORM_PACKAGES="macosx"
CONFIG_FILE=config_macosx.jmax
dnl Hack for problem of restrict finding (cc makes an error but does not return correct error code) 
AC_DEFINE(restrict,)
;;

esac

AC_SUBST(PLATFORM)
AC_SUBST(PLATFORM_PACKAGES)
AC_SUBST(FTS_SYS_LIBS)
AC_SUBST(CONFIG_FILE)

dnl Check installation directories
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(DEFAULT_ROOT, "${ac_default_prefix}/share/jmax")
else
  AC_DEFINE_UNQUOTED(DEFAULT_ROOT, "${prefix}/share/jmax")
fi

FTSDIR=${bindir}
ROOTDIR="${datadir}/jmax"

AC_SUBST(FTSDIR)
AC_SUBST(ROOTDIR)

dnl Generate include/fts/config.h
dnl provides: pointer-to-int conversions

echo creating config.h
outfile=include/fts/config.h-tmp
configfile=include/fts/config.h
cat > $outfile <<\_______EOF
/* config.h
 *
 * This is a generated file.  Please modify `configure.in'
 */

_______EOF

cat >> $outfile <<\_______EOF
/* Macros for pointer to int conversion.
   These macros are yet hardcoded, but should be generated by configure.in.
   See glib sources for more info.
*/
#define POINTER_TO_UINT(p) ( (unsigned int) (p) )
#define UINT_TO_POINTER(u) ( (void *) (u) )

_______EOF

if cmp -s $outfile include/fts/config.h
then
 echo include/fts/config.h is unchanged
 rm -f $outfile
else
 mv $outfile include/fts/config.h
fi


dnl Run configure in subdirectories
AC_CONFIG_SUBDIRS(client)

AC_OUTPUT(
Makefile
fts/Makefile
fts/version.c
include/Makefile
include/fts/Makefile
include/ftsprivate/Makefile
bin/Makefile
bin/jmax
config/Makefile
images/Makefile
tutorials/Makefile
tutorials/basics/Makefile
java/src/ircam/jmax/JMaxVersion.java
java/Makefile
java/lib/Makefile
java/lib/jacl/Makefile
java/src/Makefile
java/src/ircam/Makefile
java/src/ircam/jmax/Makefile
java/src/ircam/jmax/dialogs/Makefile
java/src/ircam/jmax/editors/Makefile
java/src/ircam/jmax/editors/console/Makefile
java/src/ircam/jmax/editors/patcher/Makefile
java/src/ircam/jmax/editors/patcher/actions/Makefile
java/src/ircam/jmax/editors/patcher/interactions/Makefile
java/src/ircam/jmax/editors/patcher/menus/Makefile
java/src/ircam/jmax/editors/patcher/objects/Makefile
java/src/ircam/jmax/fts/Makefile
java/src/ircam/jmax/toolkit/Makefile
java/src/ircam/jmax/toolkit/actions/Makefile
java/src/ircam/jmax/toolkit/menus/Makefile
java/src/ircam/jmax/widgets/Makefile
java/src/silk/Makefile
packages/Makefile
packages/alsa/Makefile
packages/alsa/c/Makefile
packages/alsa/c/src/Makefile
packages/aflib/Makefile
packages/aflib/c/Makefile
packages/aflib/c/src/Makefile
packages/control/Makefile
packages/control/c/Makefile
packages/control/c/src/Makefile
packages/control/help/Makefile
packages/data/Makefile
packages/data/c/Makefile
packages/data/c/src/Makefile
packages/data/java/Makefile
packages/data/java/ircam/Makefile
packages/data/java/ircam/jmax/Makefile
packages/data/java/ircam/jmax/editors/Makefile
packages/data/java/ircam/jmax/editors/bpf/Makefile
packages/data/java/ircam/jmax/editors/bpf/renderers/Makefile
packages/data/java/ircam/jmax/editors/bpf/tools/Makefile
packages/data/java/ircam/jmax/editors/table/Makefile
packages/data/java/ircam/jmax/editors/table/actions/Makefile
packages/data/java/ircam/jmax/editors/table/menus/Makefile
packages/data/java/ircam/jmax/editors/table/renderers/Makefile
packages/data/java/ircam/jmax/editors/table/tools/Makefile
packages/data/help/Makefile
packages/data/images/Makefile
packages/explode/Makefile
packages/explode/c/Makefile
packages/explode/c/src/Makefile
packages/explode/java/Makefile
packages/explode/java/src/Makefile
packages/explode/java/src/Makefile
packages/explode/java/src/ircam/Makefile
packages/explode/java/src/ircam/jmax/Makefile
packages/explode/java/src/ircam/jmax/editors/Makefile
packages/explode/java/src/ircam/jmax/editors/explode/Makefile
packages/explode/java/src/ircam/jmax/editors/explode/actions/Makefile
packages/explode/java/src/ircam/jmax/editors/explode/menus/Makefile
packages/explode/help/Makefile
packages/explode/images/Makefile
packages/guiobj/Makefile
packages/guiobj/c/Makefile
packages/guiobj/c/src/Makefile
packages/guiobj/java/Makefile
packages/guiobj/java/icons/Makefile
packages/guiobj/java/ircam/Makefile
packages/guiobj/java/ircam/jmax/Makefile
packages/guiobj/java/ircam/jmax/guiobj/Makefile
packages/guiobj/help/Makefile
packages/io/Makefile
packages/io/c/Makefile
packages/io/c/src/Makefile
packages/io/help/Makefile
packages/ispw/Makefile
packages/ispw/c/Makefile
packages/ispw/c/src/Makefile
packages/ispw/java/Makefile
packages/ispw/java/icons/Makefile
packages/ispw/java/ircam/Makefile
packages/ispw/java/ircam/jmax/Makefile
packages/ispw/java/ircam/jmax/ispw/Makefile
packages/ispw/help/Makefile
packages/ispw/help/control/Makefile
packages/ispw/help/signal/Makefile
packages/ispwmath/Makefile
packages/ispwmath/c/Makefile
packages/ispwmath/c/src/Makefile
packages/ispwmath/help/Makefile
packages/lists/Makefile
packages/lists/c/Makefile
packages/lists/c/src/Makefile
packages/lists/help/Makefile
packages/macosx/Makefile
packages/macosx/c/Makefile
packages/macosx/c/src/Makefile
packages/math/Makefile
packages/math/c/Makefile
packages/math/c/src/Makefile
packages/math/help/Makefile
packages/midi/Makefile
packages/midi/c/Makefile
packages/midi/c/src/Makefile
packages/midi/help/Makefile
packages/numeric/Makefile
packages/numeric/c/Makefile
packages/numeric/c/src/Makefile
packages/numeric/help/Makefile
packages/oss/Makefile
packages/oss/c/Makefile
packages/oss/c/src/Makefile
packages/oss/help/Makefile
packages/qlist/Makefile
packages/qlist/c/Makefile
packages/qlist/c/src/Makefile
packages/qlist/java/Makefile
packages/qlist/java/ircam/Makefile
packages/qlist/java/ircam/jmax/Makefile
packages/qlist/java/ircam/jmax/editors/Makefile
packages/qlist/java/ircam/jmax/editors/qlist/Makefile
packages/qlist/java/ircam/jmax/editors/qlist/actions/Makefile
packages/qlist/java/ircam/jmax/editors/qlist/menus/Makefile
packages/sequence/Makefile
packages/sequence/c/Makefile
packages/sequence/c/src/Makefile
packages/sequence/java/Makefile
packages/sequence/java/src/Makefile
packages/sequence/java/src/Makefile
packages/sequence/java/src/ircam/Makefile
packages/sequence/java/src/ircam/jmax/Makefile
packages/sequence/java/src/ircam/jmax/editors/Makefile
packages/sequence/java/src/ircam/jmax/editors/sequence/Makefile
packages/sequence/java/src/ircam/jmax/editors/sequence/actions/Makefile
packages/sequence/java/src/ircam/jmax/editors/sequence/menus/Makefile
packages/sequence/java/src/ircam/jmax/editors/sequence/renderers/Makefile
packages/sequence/java/src/ircam/jmax/editors/sequence/tools/Makefile
packages/sequence/java/src/ircam/jmax/editors/sequence/track/Makefile
packages/sequence/help/Makefile
packages/sequence/images/Makefile
packages/signal/Makefile
packages/signal/c/Makefile
packages/signal/c/src/Makefile
packages/signal/help/Makefile
packages/system/Makefile
packages/system/c/Makefile
packages/system/c/src/Makefile
packages/system/help/Makefile
packages/unixdtd/Makefile
packages/unixdtd/c/Makefile
packages/unixdtd/c/src/Makefile
packages/utils/Makefile
packages/utils/c/Makefile
packages/utils/c/src/Makefile
utils/Makefile
utils/rpm/Makefile
utils/rpm/jmax.spec
)
