dnl $Id: configure.in,v 1.94 2002/09/17 19:09:10 tisseran Exp $
dnl
dnl Process this file with autoconf to produce a configure script
dnl 
dnl $Log: configure.in,v $
dnl Revision 1.94  2002/09/17 19:09:10  tisseran
dnl First integration of threaded direct to disk (package dtd)
dnl
dnl Revision 1.93  2002/09/10 12:57:26  tisseran
dnl Change package file hierarchy (see ChangeLog)
dnl
dnl Revision 1.92  2002/09/10 11:04:19  schwarz
dnl Removed sdif which is now a separate package and cvs module.
dnl
dnl Revision 1.91  2002/09/09 15:01:05  tisseran
dnl Try to use pkg-config if --with-jack-cflags or --with-jack-ldflags are not used
dnl Add test on jack/jack.h and libjack if jack support is wanted
dnl
dnl Revision 1.90  2002/09/06 08:42:05  dechelle
dnl Changed protocol floating point values to double.
dnl Changed the Java client API
dnl
dnl Revision 1.89  2002/09/05 16:13:49  tisseran
dnl Add jmax-config and jmax.pc tools for given flags needed for compilation of external packages.
dnl To get FTS cflags:
dnl $ jmax-config --cflags
dnl $ pkg-config --cflags jmax
dnl To get FTS ldflags:
dnl $ jmax-config --libs
dnl $ pkg-config --libs jmax
dnl To get directory where jMax standard packages are installed:
dnl $ jmax-config --package-dir
dnl $ pkg-config --variable=pkgdatadir jmax
dnl
dnl Revision 1.88  2002/09/03 09:12:53  tisseran
dnl Fix help display of SDIF package setup
dnl Fix setup of JACK package
dnl
dnl Revision 1.87  2002/08/30 16:44:37  schwarz
dnl Added cvs id and log
dnl
dnl Revision 1.86 2002/08/30 16:41:10 schwarz
dnl Added --with-sdif option and configuration options for package sdif.
dnl
dnl Revision 1.85 2002/08/27 15:09:54 tisseran
dnl First integration of jack package in jMax.
dnl Add a flag to use GNU claspath when compiling with gcj
dnl
dnl Revision 1.84 2002/07/24 11:49:24 tisseran
dnl Add doc/api/Makefile generation to create doxygen api documentation


AC_INIT(fts/version.c.in)

. $srcdir/JMAX-VERSION
JMAX_VERSION=${JMAX_MAJOR_VERSION}.${JMAX_MINOR_VERSION}.${JMAX_PATCH_VERSION}${JMAX_VERSION_STATUS}

VERSION=${JMAX_VERSION}
PACKAGE=jmax

AM_INIT_AUTOMAKE(jmax,${JMAX_VERSION})
AC_SUBST(JMAX_VERSION)

AC_PREFIX_DEFAULT(/usr)

AM_CONFIG_HEADER(include/ftsconfig-ac.h)

dnl Check for debug
AC_ARG_ENABLE(debug,
  [  --enable-debug[=value]   compile with debug [default=no]],
  with_debug="yes",
  with_debug="no")
if test "$with_debug" = "yes"
then
  AC_DEFINE(DEBUG,1,[Define to enable debug])
  CFLAGS="$CFLAGS -g"
fi

dnl Guess the host
AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_CC
if test "$ac_cv_prog_cc" = "no" ; then
   AC_MSG_ERROR([*** No C compiler])
fi
AC_ISC_POSIX
AC_PROG_INSTALL

dnl Check for libtool
AC_LIBTOOL_DLOPEN
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

dnl Checks for libraries.
AC_CHECK_LIB(m, sin)
AC_CHECK_FUNCS(sinf cosf tanf asinf acosf atanf expf logf log10f)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS( sys/param.h unistd.h alloca.h sys/time.h time.h sys/socket.h netinet/in.h arpa/inet.h netdb.h)

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_CHECK_FUNCS(socket)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_BIGENDIAN

dnl Check for lex/flex and yacc/bison
AM_PROG_LEX
AC_PROG_YACC

dnl Check for Java compiler
AC_ARG_WITH(javac,
  [  --with-javac=JAVAC       give java compiler (optional)],
  [JAVAC="$withval"])
AC_ARG_WITH(java,
  [  --with-java=JAVA         give java virtual machine (optional)],
  [JAVA="$withval"])

dnl Check for classpath
AC_ARG_WITH(classpath,
  [  --with-classpath=CLASSPATH	additionnal classpath (optionnal)],
  [ CLASSPATH="$withval"])
dnl CLASSPATH=
export CLASSPATH
AC_PROG_JAVAC
AC_PROG_JAVA
AC_TRY_RUN_JAVA
dnl Check for swing
AC_CHECK_CLASS(javax.swing.JButton)

JAVACX=$JAVAC
AC_SUBST(JAVACX)
JAVACFLAGSX=
if test "$with_debug" = "yes"
then
  JAVACFLAGSX="$JAVACFLAGSX -g"
fi
AC_SUBST(JAVACFLAGSX)

dnl Check for memory allocation debug
AC_ARG_ENABLE(check_memory,
  [  --enable-check-memory[=value]   compile with -fcheck-memory-usage [default=no]],
  check_memory="yes",
  check_memory="no")

dnl Check for libtool version
dnl Carefull: the character set in sed substitute is eaten by m4, so we must change quoting
dnl (autoconf manual, section 7.3 quoting)
AC_MSG_CHECKING( "for libtool major version")
changequote(<<,>>)dnl
libtool_major_version=`grep "VERSION=" ltmain.sh | sed 's/VERSION=//' | sed 's/\([0-9][0-9]*\)\..*/\1/'`
changequote([,])dnl
AC_MSG_RESULT( "$libtool_major_version")
AC_MSG_CHECKING( "for libtool minor version")
changequote(<<,>>)dnl
libtool_minor_version=`grep "VERSION=" ltmain.sh | sed 's/VERSION=//' | sed 's/[0-9][0-9]*\.\([0-9][0-9]*\)\(\.[0-9][0-9]*\)*/\1/'`
changequote([,])dnl
AC_MSG_RESULT( "$libtool_minor_version")
if test "$libtool_major_version" -le 1 -a "$libtool_minor_version" -lt 4 ; then DOT_LIBS=-L.libs ; fi
AC_SUBST(DOT_LIBS)

dnl Set platform specifics
case "$host" in

dnl GNU/Linux on an Intel or compatible
i*86-*-linux*|powerpc-*-linux-gnu)
PLATFORM=linux
CFLAGS="$CFLAGS -Wall -Wno-unused"
if test "$with_debug" != "yes"
then
  CFLAGS="$CFLAGS -O3 -funroll-loops -fmove-all-movables -fstrict-aliasing"
fi
if test "$check_memory" = "yes"
then
  CFLAGS="$CFLAGS -fcheck-memory-usage"
fi
dnl Platform specific CFLAGS
case "$host" in
dnl i*86-*-linux*) CFLAGS="$CFLAGS -mpentiumpro" ;;
i*86-*-linux*) CFLAGS="$CFLAGS" ;;
esac

PLATFORM_PACKAGES="oss"

AM_PATH_AUDIOFILE(0.0.2,[PLATFORM_PACKAGES="unixdtd aflib $PLATFORM_PACKAGES"],[echo packages unixdtd and aflib will not be build])
AM_PATH_ALSA(0.9.0,[
	CONFIG_FILE=config_linux_alsa.jprj
	PLATFORM_PACKAGES="alsa $PLATFORM_PACKAGES"
],[
	CONFIG_FILE=config_linux_oss.jprj
])

FTS_SYS_LIBS="-ldl -lpthread `test $check_memory = yes && echo -lmpatrol -lbfd -liberty`"
ACX_C_RESTRICT
;;

mips-sgi-irix6.5)
PLATFORM=sgi
CFLAGS="$CFLAGS -mips4 -n32 -r10000 -LANG:restrict"
if test "$with_debug" != "yes"
then
  CFLAGS="$CFLAGS -O3 -OPT:roundoff=3:IEEE_arithmetic=3:alias=typed:Olimit=0 -TARG:platform=ip27:processor=r10000 -float_const -INLINE:=ON:dfe=ON  -LNO:opt=1"
fi
PLATFORM_PACKAGES="sgi unixdtd"
FTS_SYS_LIBS="-ldl -laudiofile"
CONFIG_FILE=config_sgi.jprj
ACX_C_RESTRICT
;;

powerpc-apple-darwin*)
PLATFORM=macosx
CFLAGS="$CFLAGS -Wall -Wno-unused"
if test "$with_debug" != "yes"
then
  dnl Functions inlining may result in bad code generation (http://developer.apple.com/techpubs/macosx/Essentials/Performance/Languages/Automated_C_ptimization.html)
  CFLAGS="$CFLAGS -O3 -funroll-loops -fno-inline"
fi
PLATFORM_PACKAGES="macosx"
CONFIG_FILE=config_macosx.jprj
dnl Hack for problem of restrict finding (cc makes an error but does not return correct error code) 
AC_DEFINE(restrict,)
;;

esac

AC_SUBST(PLATFORM)
AC_SUBST(PLATFORM_PACKAGES)
AC_SUBST(FTS_SYS_LIBS)
AC_SUBST(CONFIG_FILE)

dnl Check installation directories
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(DEFAULT_ROOT, "${ac_default_prefix}/share/jmax")
else
  AC_DEFINE_UNQUOTED(DEFAULT_ROOT, "${prefix}/share/jmax")
fi

FTSDIR=${bindir}
ROOTDIR="${datadir}/jmax"

AC_SUBST(FTSDIR)
AC_SUBST(ROOTDIR)


dnl ###########################################################################
dnl check for pkg-config
AC_PATH_PROG(PKG_CONFIG,pkg-config,no)

dnl ###########################################################################
dnl choice of JACK package
with_jack="no"
AC_ARG_ENABLE(jack, dnl newline and indentation:
[ 
  --enable-jack[=value]	compile jack package [default=no]],
  with_jack="$enableval",
  with_jack="no")


dnl options to find JACK header and JACK library 
AC_ARG_WITH(jack-cflags,
  [  --with-jack-cflags=JACK_CFLAGS	jack support cflags (optional)],
  [JACK_CFLAGS="$withval";
  with_jack="yes";],
  [ if test "$with_jack" = "yes"; then
       if test $PKG_CONFIG != "no"; then
	  JACK_CFLAGS=`$PKG_CONFIG --cflags jack`;
       fi
    fi])

AC_ARG_WITH(jack-ldflags,
  [  --with-jack-ldflags=JACK_LDFLAGS	jack support ldflags (optional)],
  [JACK_LDFLAGS="$withval";
  with_jack="yes";],
  [ if test "$with_jack" = "yes"; then
       if test $PKG_CONFIG != "no"; then
	  JACK_LDFLAGS=`$PKG_CONFIG --libs jack`;
       fi
    fi])

dnl output JACK feature
if test "$with_jack" = "yes"
then
	dnl TODO: add a jack test here
	dnl Use JACK_CFLAGS and JACK_LDFLAGS before testing
	dnl Store current value of CPPFLAGS, CFLAGS, CXXFLAGS and LDFLAGS
	tmp_CPPFKLAGS="$CPPFLAGS"
	tmp_CFLAGS="$CFLAGS"
	tmp_CXXFLAGS="$CXXFLAGS"
	tmp_LDFLAGS="$LDFLAG"
	tmp_LIBS="$LIBS"

	dnl Set new value of CPPFLAGS, CFLAGS, CXXFLAGS and LDFLAGS
	CPPFLAGS="$JACK_CFLAGS"
	LDFLAGS="$JACK_LDFLAGS"
	LIBS="$JACK_LDFLAGS"

	dnl check if jack headeris installed
	AC_CHECK_HEADER(jack/jack.h, dnl header to check
	[HAVE_JACK_H="true"],         dnl action-if-found
	[HAVE_JACK_H="false"])        dnl action-if-not-found
	dnl Check result value of test
	if test "$HAVE_JACK_H" != "true"; then
	   AC_MSG_ERROR([*** jack/jack.h not found ***])
	fi

	dnl check if jack library is installed
	AC_CHECK_LIB(jack,jack_client_new,
	[ HAVE_LIB_JACK="true"],
	[ HAVE_LIB_JACK="false"])
	dnl Check result value of test
	if test "$HAVE_LIB_JACK" != "true"; then
	   AC_MSG_ERROR([*** jack library not found ***])
	fi

	dnl Reset value of CPPFLAGS, CFLAGS, CXXFLAGS and LDFLAGS
	CPPFLAGS="$tmp_CPPFKLAGS"
	CFLAGS="$tmp_CFLAGS"
	CXXFLAGS="$tmp_CXXFLAGS"
	LDFLAG="$tmp_LDFLAGS"
	LIBS="$tmp_LIBS"
	dnl Add jack in packages to compile
	ADDITIONAL_PACKAGES="$ADDITIONAL_PACKAGES jack"
	dnl Define macro to enable scheduler special function (fts_sched_run_one_tick)
	CFLAGS="$CFLAGS -DUSE_JACK"
fi

AC_SUBST(JACK_CFLAGS)
AC_SUBST(JACK_LDFLAGS)


dnl tell makefiles to use this variable 
AC_SUBST(ADDITIONAL_PACKAGES)


dnl Run configure in subdirectories
AC_CONFIG_SUBDIRS(client)

AC_OUTPUT(
Makefile
fts/Makefile
fts/version.c
include/Makefile
include/fts/Makefile
include/ftsprivate/Makefile
bin/Makefile
bin/jmax
config/Makefile
doc/Makefile
doc/api/Makefile
doc/images/Makefile
images/Makefile
help/Makefile
tutorials/Makefile
tutorials/basics/Makefile
java/Makefile
java/src/Makefile
java/src/ircam/Makefile
java/src/ircam/jmax/JMaxVersion.java
java/src/ircam/jmax/Makefile
java/src/ircam/jmax/dialogs/Makefile
java/src/ircam/jmax/editors/Makefile
java/src/ircam/jmax/editors/configuration/Makefile
java/src/ircam/jmax/editors/console/Makefile
java/src/ircam/jmax/editors/patcher/Makefile
java/src/ircam/jmax/editors/patcher/actions/Makefile
java/src/ircam/jmax/editors/patcher/interactions/Makefile
java/src/ircam/jmax/editors/patcher/menus/Makefile
java/src/ircam/jmax/editors/patcher/objects/Makefile
java/src/ircam/jmax/editors/project/Makefile
java/src/ircam/jmax/fts/Makefile
java/src/ircam/jmax/toolkit/Makefile
java/src/ircam/jmax/toolkit/actions/Makefile
java/src/ircam/jmax/toolkit/menus/Makefile
java/src/ircam/jmax/widgets/Makefile
packages/Makefile
packages/alsa/Makefile
packages/alsa/c/Makefile
packages/alsa/c/src/Makefile
packages/aflib/Makefile
packages/aflib/c/Makefile
packages/aflib/c/src/Makefile
packages/control/Makefile
packages/control/c/Makefile
packages/control/c/src/Makefile
packages/control/help/Makefile
packages/data/Makefile
packages/data/c/Makefile
packages/data/c/include/Makefile
packages/data/c/src/Makefile
packages/data/java/Makefile
packages/data/java/ircam/Makefile
packages/data/java/ircam/jmax/Makefile
packages/data/java/ircam/jmax/editors/Makefile
packages/data/java/ircam/jmax/editors/bpf/Makefile
packages/data/java/ircam/jmax/editors/bpf/renderers/Makefile
packages/data/java/ircam/jmax/editors/bpf/tools/Makefile
packages/data/java/ircam/jmax/editors/table/Makefile
packages/data/java/ircam/jmax/editors/table/menus/Makefile
packages/data/java/ircam/jmax/editors/table/renderers/Makefile
packages/data/java/ircam/jmax/editors/table/tools/Makefile
packages/data/help/Makefile
packages/data/images/Makefile
packages/dtd/Makefile
packages/dtd/c/Makefile
packages/dtd/c/src/Makefile
packages/guiobj/Makefile
packages/guiobj/c/Makefile
packages/guiobj/c/src/Makefile
packages/guiobj/java/Makefile
packages/guiobj/java/icons/Makefile
packages/guiobj/java/ircam/Makefile
packages/guiobj/java/ircam/jmax/Makefile
packages/guiobj/java/ircam/jmax/guiobj/Makefile
packages/guiobj/help/Makefile
packages/io/Makefile
packages/io/c/Makefile
packages/io/c/src/Makefile
packages/io/help/Makefile
packages/ispw/Makefile
packages/ispw/c/Makefile
packages/ispw/c/src/Makefile
packages/ispw/java/Makefile
packages/ispw/java/icons/Makefile
packages/ispw/java/ircam/Makefile
packages/ispw/java/ircam/jmax/Makefile
packages/ispw/java/ircam/jmax/ispw/Makefile
packages/ispw/java/ircam/jmax/editors/Makefile
packages/ispw/java/ircam/jmax/editors/qlist/Makefile
packages/ispw/java/ircam/jmax/editors/qlist/actions/Makefile
packages/ispw/java/ircam/jmax/editors/qlist/menus/Makefile
packages/ispw/java/ircam/jmax/editors/explode/Makefile
packages/ispw/java/ircam/jmax/editors/explode/actions/Makefile
packages/ispw/java/ircam/jmax/editors/explode/menus/Makefile
packages/ispw/help/Makefile
packages/ispw/images/Makefile
packages/ispw/sounds/Makefile
packages/ispwmath/Makefile
packages/ispwmath/c/Makefile
packages/ispwmath/c/src/Makefile
packages/ispwmath/help/Makefile
packages/jack/Makefile
packages/jack/c/Makefile
packages/jack/c/src/Makefile
packages/macosx/Makefile
packages/macosx/c/Makefile
packages/macosx/c/src/Makefile
packages/midi/Makefile
packages/midi/c/Makefile
packages/midi/c/src/Makefile
packages/midi/help/Makefile
packages/numeric/Makefile
packages/numeric/c/Makefile
packages/numeric/c/src/Makefile
packages/numeric/help/Makefile
packages/oss/Makefile
packages/oss/c/Makefile
packages/oss/c/src/Makefile
packages/oss/help/Makefile
packages/sequence/Makefile
packages/sequence/c/Makefile
packages/sequence/c/src/Makefile
packages/sequence/java/Makefile
packages/sequence/java/ircam/Makefile
packages/sequence/java/ircam/jmax/Makefile
packages/sequence/java/ircam/jmax/editors/Makefile
packages/sequence/java/ircam/jmax/editors/sequence/Makefile
packages/sequence/java/ircam/jmax/editors/sequence/actions/Makefile
packages/sequence/java/ircam/jmax/editors/sequence/menus/Makefile
packages/sequence/java/ircam/jmax/editors/sequence/renderers/Makefile
packages/sequence/java/ircam/jmax/editors/sequence/tools/Makefile
packages/sequence/java/ircam/jmax/editors/sequence/track/Makefile
packages/sequence/help/Makefile
packages/sequence/images/Makefile
packages/signal/Makefile
packages/signal/c/Makefile
packages/signal/c/src/Makefile
packages/signal/help/Makefile
packages/system/Makefile
packages/system/c/Makefile
packages/system/c/src/Makefile
packages/system/help/Makefile
packages/unixdtd/Makefile
packages/unixdtd/c/Makefile
packages/unixdtd/c/src/Makefile
packages/utils/Makefile
packages/utils/c/Makefile
packages/utils/c/include/Makefile
packages/utils/c/src/Makefile
utils/Makefile
utils/jmax-config/Makefile
utils/jmax-config/jmax-config
utils/pkgconfig/jmax.pc
utils/pkgconfig/Makefile
utils/rpm/Makefile
utils/rpm/jmax.spec
utils/xml/Makefile
)


echo
echo Configuration complete. Type \'make\' to build jMax
echo
